@startuml
!include globals/stylesheets.iuml

class GameController {
   -gameService: GameService
   +createGame() : GameDto
}
class GameDto{
    -id: String
}
class Game {
   -id: String
   -minimumAmountOfPlayers:Int
   -maximumAmountOfPlayers:Int
   -numberOfRoundsInTurn:Int
}
interface EntityService {
   saveNewGame(game: Game)
}
class EntityServiceImpl implements EntityService {
   -gameRepository: GameRepository
}
interface GameService {
    createGame()
}
class GameServiceImpl implements GameService {
    -gameProperties: GameProperties
    -entityService: EntityService
}
interface GameRepository {
   save(game: Game)
   existsById(id: String)
}
class GameProperties {
    -minimumAmountOfPlayers:Int
    -maximumAmountOfPlayers:Int
}
interface RandomProvider {
    getEightCharacterId(): String
}
class RandomProviderImpl implements RandomProvider
interface PromptRepository {
     getPrompts():List<Prompt>
}
class PromptRepositoryImpl implements PromptRepository {
     -defaultDeck: List<Prompt>
}

GameController "1"-->"1" GameService
GameService "1"..>"*" Game
GameServiceImpl "1"-->"1" EntityService : <<uses>>
GameServiceImpl "1"-->"1" RandomProvider : <<uses>>
GameServiceImpl "1"-->"1" GameProperties : <<uses>>
GameServiceImpl "1"-->"1" PromptRepository : <<uses>>
EntityServiceImpl "1"-->"1" GameRepository : <<uses>>
GameController "1"..>"*" GameDto
@enduml